--- a/OracleJETApplication-V-2/scss/oj-override.scss
+++ b/OracleJETApplication-V-2/scss/oj-override.scss
@@ -354,6 +354,9 @@ h1.pageTitle{
 .oj-navigationlist-horizontal .oj-navigationlist-element, .oj-navigationlist-icon-only .oj-navigationlist-element{
     margin:0;
 }
+a.oj-navigationlist-item-content.oj-navigationlist-item-no-icon{
+    padding:0;
+}
 
 .oj-navigationlist-item {
     border-width:0 !important;
@@ -856,11 +859,13 @@ html:not([dir="rtl"]) .oj-dialog-title{
         align-self: flex-start;
         margin:0 5px;
     }
-    .empInfo{
-        margin-left:10px;
+    .empInfo, .empContactInfo{
         .oj-flex-item{
             margin:0 20px 10px 0;
         }
+    }
+    .empInfo{
+        margin-left:10px;
     }
     .weekSummary{
         font-weight:bold;
@@ -881,25 +886,9 @@ html:not([dir="rtl"]) .oj-dialog-title{
             display: inline-block;
             &.clockedIn{
                 color: $clockedInStatus;
-                &::before{
-                    height:10px;
-                    width:10px;
-                    background-color:$clockedInStatus;
-                    content:'';
-                    display:inline-block;
-                    margin-right: 5px;
-                }
             }
             &.clockedOut{
                 color: $clockedOutStatus;
-                 &::before{
-                    height:10px;
-                    width:10px;
-                    background-color:$clockedOutStatus;
-                    content:'';
-                    display:inline-block;
-                    margin-right: 5px;
-                }
             }
         }
     }
