updated aria label

--- a/OracleJETApplication-V-2/views/off-canvas-template-top.html
+++ b/OracleJETApplication-V-2/views/off-canvas-template-top.html
@@ -21,7 +21,7 @@
         <div id="tabs-1" class="regionTabSections" style="padding-top: 10px; ">
              <div id="filmStripDiv">
                 <div id="filmStrip"
-                     aria-label="Set of chemicals"
+                     aria-label="Set of Locations"
                      data-bind="ojComponent: {
                        component: 'ojFilmStrip',
                        arrowPlacement: $root.currentNavArrowPlacement,
