--- a/OracleJETApplication-V-2/css/oj-override.css
+++ b/OracleJETApplication-V-2/css/oj-override.css
@@ -1213,3 +1213,5 @@ html:not([dir="rtl"]) .oj-dialog-title {
     border-radius: 50%; }
   #loginPage .footer {
     text-align: right; } }
+
+/*# sourceMappingURL=oj-override.css.map */
