--- a/OracleJETApplication-V-2/views/labor-management/dialogwindow/schedule-dailogwindow-small.html
+++ b/OracleJETApplication-V-2/views/labor-management/dialogwindow/schedule-dailogwindow-small.html
@@ -262,24 +262,13 @@
                 <div style="color: #000000">$126.75 (18.5 hours) | $120.00 tips</div>
                 <div style="color: #000000">$246.75</div>
               </div>
-<!--              <div class="oj-md-4 oj-lg-3 oj-flex-item currentWeekHeader" style="background-color: #ffffff; margin-right: 5px ">
-                <div style="background-color:  #FE9A2E; height: 4px"></div>
-                <div style="color: #000000">BARTENDER TOTALS</div>
-                <div style="color: #000000">$126.75 (18.5 hours) | $120.00 tips</div>
-                <div style="color: #000000">$246.75</div>
-              </div>
-              <div class="oj-md-4 oj-lg-3 oj-flex-item currentWeekHeader" style="background-color: #ffffff; margin-right: 5px ">
-                <div style="background-color:  #2E2EFE; height: 4px"></div>
-                <div style="color: #000000">SERVER TOTALS</div>
-                <div style="color: #000000">$126.75 (18.5 hours) | $120.00 tips</div>
-                <div style="color: #000000">$246.75</div>
-              </div>-->
+
             </div>
           
-            <div class="currentFilmStrip">
+<!--            <div class="currentFilmStrip">
                 <div id="filmStripDiv" class="oj-panel" style="margin: '20px';">
                   <div id="filmStrip" aria-label="Set of chemicals" data-bind="ojComponent: {component: 'ojFilmStrip', arrowPlacement: self.currentNavArrowPlacement, arrowVisibility: self.currentNavArrowVisibility}">
-                      <!-- ko foreach: schedules -->
+                       ko foreach: schedules 
                       <div class="oj-panel oj-panel-alt2 schedule-filmstrip-item" >
                          
                         <div style="color: black;  text-align: center;">
@@ -348,11 +337,11 @@
                         
                      </div>
                 
-                    <!-- /ko -->
+                     /ko 
 
                   </div>
-                </div> <!-- end filmStripDiv -->
-            </div>
+                </div>  end filmStripDiv 
+            </div>-->
       </div><!-- end child content -->
   </div>
      </div>
