updates from SVN

--- a/OracleJETApplication-V-2/views/labor-management/dialogwindow/employee-basicinfo-modal-small.html
+++ b/OracleJETApplication-V-2/views/labor-management/dialogwindow/employee-basicinfo-modal-small.html
@@ -1,4 +1,4 @@
-<div style="display:none;" id="empBasicDialogWindow" data-bind="ojComponent:{
+<div style="display:none;" id="empLaborBasicDialogWindow" data-bind="ojComponent:{
             component: 'ojDialog',
             resizeBehavior: 'none',
             dragAffordance: 'none',
