--- a/OracleJETApplication-V-2/views/labor-management/schedules-timecards/schedules-timecards-large.html
+++ b/OracleJETApplication-V-2/views/labor-management/schedules-timecards/schedules-timecards-large.html
@@ -1,13 +1,13 @@
 
 <div class="oj-flex">
-    <div class="oj-flex-item oj-lg-3 oj-md-3" >
+    <div class="oj-flex-item oj-lg-2 oj-md-2" >
         <div style="margin: 25px" data-bind="ojComponent:{
                     component: 'ojNavigationList', 
                     drillMode: 'collapsible'
                     }"> 
         <ul>
                 
-                <li id="schedule" s>
+                <li id="schedule">
                     <a href="#" >Schedule</a>
                     <ul>
                         <li id="curr">
@@ -17,7 +17,7 @@
                             <a href="#" >Previous</a>
                         </li>
                         <li id="next">
-                            <a href="#"  >next</a>
+                            <a href="#"  >Next</a>
                         </li>
                     </ul>
                 </li>
@@ -27,17 +27,17 @@
         </ul>
         </div>
     </div>
-    <div class="oj-flex-item oj-lg-9 oj-md-9" style="height: 30px">
-        <h1><span style="color: #000000;">October 11-17, 2015</span></h1>
+    <div class="oj-flex-item oj-lg-10 oj-md-10" >
+        <h1><span class="fa fa-calendar" style="color: #000000;">October 15-21, 2015</span></h1>
         <hr/>
-        <div class="oj-flex oj-flex-item " style="background: #808080">
+        <div class="oj-flex oj-flex-item " style="background: #f7f4f5; height: 30px">
                 <div class="oj-lg-6 oj-md-6 oj-flex-item "><strong>Schedule</strong> <a  class="shiftPoolLink">Shift Pool </a></div>
                 <div class="oj-lg-6 oj-md-6 oj-flex-item scheduleIconBar" style="float: right">
                         <a href="#" ><span class="fa fa-envelope-o" style="float: right"></span></a>
                         <a href="#"><span class="fa fa-print" style="float: right"></span></a>
                 </div>
             </div>
-        <div class="oj-flex" style="margin: 15px">
+        <div class="oj-flex" style="margin: 5px">
          <div >
              <input id="btnJob" type="button" value="JOB" 
                     style="background-color: #ffffff; color: #000000; width: 70px; height: 30px" title="Job"
@@ -387,7 +387,7 @@
             </div>
             
             
-            <div ><!-- child content -->
+            <div style="height: 250px; overflow-y: scroll;"><!-- child content -->
             
             
             <div class="oj-flex oj-lg-12 ">
