--- a/OracleJETApplication-V-2/views/header.html
+++ b/OracleJETApplication-V-2/views/header.html
@@ -53,6 +53,7 @@
         <div data-bind="if: $root.router.stateId() == 'people'">
             <div class="oj-flex mobileTitle oj-sm-only-hide" data-bind="css: $root.router.stateId() + 'TitleWrap'">
                 <h1 data-bind="text: $root.pageTitle" class="pageTitle"></h1>
+                <a class="addEmp" href=""><i class="fa fa-plus" aria-hidden="true"></i> add</a>
             </div>
         </div>
 
