--- a/OracleJETApplication-V-2/scss/oj-override.scss
+++ b/OracleJETApplication-V-2/scss/oj-override.scss
@@ -351,6 +351,10 @@ h1.pageTitle{
 }
 
 /*OJET Overwrites*/
+.oj-button.oj-button-full-chrome, .oj-button.oj-button-full-chrome:link, .oj-button.oj-button-full-chrome:visited, .oj-button.oj-button-full-chrome:hover, .oj-button.oj-button-full-chrome:active{
+    font-weight:normal !important;
+}
+
 .oj-navigationlist-horizontal .oj-navigationlist-element, .oj-navigationlist-icon-only .oj-navigationlist-element{
     margin:0;
 }
@@ -737,7 +741,52 @@ html:not([dir="rtl"]) .oj-dialog-title{
     }
 }
 //People CSS
-
+a.addEmp{
+    line-height: 60px;
+    margin: 10px;
+    text-decoration: none;
+    color: $white;
+    .fa{
+        font-size:16px;
+    }
+}
+.empStatusInactive{
+    color: $brightRed;
+    .fa-times-circle{
+        display: inline-block;
+        font: normal normal normal 14px/1 FontAwesome;
+        font-size: 16px;
+        text-rendering: auto;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+    }
+}
+.empStatusActive{
+    color: $brightGreen;
+    .fa-check-circle{
+        display: inline-block;
+        font: normal normal normal 14px/1 FontAwesome;
+        font-size: 16px;
+        text-rendering: auto;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+    }
+}
+#hidesimple{
+    background-color: transparent;
+    background-image: none;
+    border: 0;
+    border-color:transparent;
+    color: $lightBlue;
+    outline: 0 !important;
+    &.oj-active, &.oj-focus{
+        color: $brightBlue;
+    }
+    .fa{
+        font-size:16px;
+        color: $lightBlue;
+    }
+}
 .inputFieldWrap{
     max-width:100%;
 }
@@ -755,13 +804,31 @@ html:not([dir="rtl"]) .oj-dialog-title{
 }
 .searchBtnWrap{
     float:right;
+    #submit{
+        padding: 10px 20px !important;
+        height: auto;
+        line-height: 16px;
+    }
+}
+#advsubmit, #hideadvance{
+    padding: 10px 20px !important;
+    height: auto;
+    line-height: 16px;
 }
 .searchTitleBar{
-    height:20px;
-    padding:10px;
-    background-color: $searchTitleBarBckg;
-    label{
-        font-size: 20px;
+    overflow:hidden;
+    padding:10px !important;
+    &.oj-collapsible-header{
+    //    height:20px;
+    //    padding:10px;
+        background-color: $searchTitleBarBckg;
+        label{
+            font-size: 20px;
+        }
+    }
+    a.oj-component-icon.oj-collapsible-header-icon {
+        float: right;
+        padding: 0;
     }
 }
 .firstAdvSearchArea, #advancebtn{
@@ -809,8 +876,8 @@ html:not([dir="rtl"]) .oj-dialog-title{
 }
 .empImg{
     border-radius:50%;
-    height:75px;
-    width:75px;
+    height:65px;
+    width:65px;
 }
 .empImgDialog{
     border-radius:50%;
@@ -819,6 +886,7 @@ html:not([dir="rtl"]) .oj-dialog-title{
 }
 .empImgCol{
     max-width:95px;
+    text-align: center;
 }
 .oj-listview-item.oj-hover{
     background-color: #ebeced !important;
@@ -1011,7 +1079,11 @@ html:not([dir="rtl"]) .oj-dialog-title{
 //        padding: 10px 10px 0 10px;
 //    }
 //}
-
+.searchWindow{
+    h3{
+        padding:10px;
+    }
+}
 
 //Media Query
 //Medium/ipad (UP)
@@ -1182,7 +1254,7 @@ html:not([dir="rtl"]) .oj-dialog-title{
     {
         ##{$section}NavList{
             background-color:$backGroundColor;
-            height: 40px;
+            height: 10px;
         }
         ##{$section}Tabs{
             border-top:1px solid $accentColor;
