--- a/OracleJETApplication-V-2/views/partials/employee-search/employee-search-small.html
+++ b/OracleJETApplication-V-2/views/partials/employee-search/employee-search-small.html
@@ -1,155 +1,154 @@
 <!--Linked to people.js through modules and template bindings-->
 
 <div class="searchWindow">
-<form data-bind="submit: filteredAllPeople">
-    <div class="oj-flex oj-flex-items-pad">
-        <div class="oj-flex-item">
-        <h3>Search Criteria </h3>
-        </div>
-        <div class="oj-flex-item viewAllEmployee">
-            <a href="#">view all employees <i class="fa fa-arrow-circle-right"></i></a>
-        </div>
-    </div>
-    <div class="oj-flex" >
-        <div class="oj-flex-item searchFieldWrap">
+    <form data-bind="submit: filteredAllPeople">
 
-            <div class="searchTitleBar">
-                <label>Search</label>
-            </div>
-            <div id="simplesearch" class="simplesearchWrap" data-bind="visible:visibleAdvanceSearch()===false">
-                <input class="inputField"
-                       placeholder="Search for active names, stores, jobs"
-                       id="firstname" data-bind="value: firstNameSearch, ojComponent: {component: 'ojInputText', rootAttributes:{class:'inputFieldWrap'}}"/>
-                <input class="oj-button-primary" id="submit" type="submit"
-                       data-bind="ojComponent: {component: 'ojButton',
-                label: 'Search', icons: { start: 'fa fa-search'} }" />
-                <input id="reset" type="reset" data-bind="click: resetData, ojComponent: {component: 'ojButton', label: 'Clear'}" />
-                <button id="hidesimple"
-                       data-bind="click: hideSimpleSearch, ojComponent: {component: 'ojButton', label: 'Adv. Search'}" />
+            <div class="searchFieldWrap">
+                  <div id="accordionPage" data-bind="ojComponent: {component: 'ojAccordion'}">
+                                  <div id="c1">
+                                      <label class="searchTitleBar">Search</label>
+                                      <div>
+                <div id="simplesearch" class="simplesearchWrap" data-bind="visible:visibleAdvanceSearch()===false">
+                    <input class="inputField"
+                           placeholder="search for active names, stores, jobs"
+                           id="firstname" data-bind="value: firstNameSearch, ojComponent: {component: 'ojInputText', rootAttributes:{class:'inputFieldWrap'}}"/>
+                    <input class="oj-button-primary" id="submit" type="submit"
+                           data-bind="ojComponent: {component: 'ojButton',
+                    label: 'search', icons: { start: 'fa fa-search'} }" />
+<!--                    <input id="reset" type="reset" data-bind="click: resetData, ojComponent: {component: 'ojButton', label: 'Clear'}" />-->
+                    <button id="hidesimple"
+                           data-bind="click: hideSimpleSearch, ojComponent: {component: 'ojButton', icons: {start: 'fa fa-search'}, label: 'adv. search'}" />
 
-            </div>
+                </div>
 
-            <div id="advanceseach" data-bind="visible:visibleAdvanceSearch">
-<!--                            <div class="oj-flex-item" style="background-color: #fffff; padding: 10px; ">
-                    <span style="font-style:bold">Advance Search</span>
-                </div>-->
+                <div id="advanceseach" data-bind="visible:visibleAdvanceSearch">
+    <!--                            <div class="oj-flex-item" style="background-color: #fffff; padding: 10px; ">
+                        <span style="font-style:bold">Advance Search</span>
+                    </div>-->
 
-                    <div class="firstAdvSearchArea">
-                        <div>
-                            <label for="firstname">FIRST NAME</label>
-                            <input id="firstname" data-bind="value: advFirstNameSearch, ojComponent: {component: 'ojInputText'}"/>
+                        <div class="firstAdvSearchArea">
+                            <div>
+                                <label for="firstname">FIRST NAME</label>
+                                <input id="firstname" data-bind="value: advFirstNameSearch, ojComponent: {component: 'ojInputText'}"/>
 
-                            <label for="lastname">LAST NAME</label>
-                            <input id="lastname" data-bind="value: lastNameSearch,ojComponent: {component: 'ojInputText'}">
+                                <label for="lastname">LAST NAME</label>
+                                <input id="lastname" data-bind="value: lastNameSearch,ojComponent: {component: 'ojInputText'}">
 
+                            </div>
+
+                            <div>
+                                <label for="homestore">HOME STORE ASSIGNMENT</label>
+                                <input placeholder="" id="homestore" data-bind="value: homeStoreSearch, ojComponent: {component: 'ojInputText'}"/>
+
+                                <label for="lastname">AWAY STORE(S)</label>
+                                <input id="awaystore" data-bind="value: awayStoreSearch,ojComponent: {component: 'ojInputText'}">
+
+                            </div>
+
+                            <div>
+                                <label for="job">JOB</label>
+                                <input placeholder="" id="job" data-bind="value: jobSearch, ojComponent: {component: 'ojInputText'}"/>
+
+                                <label for="payroll">PAYROLL ID</label>
+                                <input id="payroll" data-bind="value: payrollIdSearch,ojComponent: {component: 'ojInputText'}">
+
+                            </div>
                         </div>
+                        <div class="accordionRow">
+                            <div id="employee-search-accordion" data-bind="ojComponent: {component: 'ojAccordion'}">
+                                <div id="c1">
+                                    <label for="status">STATUS</label>
+                                    <div>
+                                        <div id="statuscheckboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
+                                                              component: 'ojCheckboxset',
+                                                              invalidComponentTracker: statusTracker,
+                                                              value: currentStatus}">
+                                            <span class="oj-choice-row">
+                                                <input id="active" type="checkbox" value="Active" checked>
+                                                <label for="active">Active</label>
+                                            </span>
+                                            <span class="oj-choice-row">
+                                                <input id="inactivesuspended" type="checkbox" value="Inactive-Suspended"  checked>
+                                                <label for="inactivesuspended">Inactive-Suspended</label>
+                                            </span>
+                                            <span class="oj-choice-row">
+                                                <input id="inactiveterm" type="checkbox" value="Inactive-Terminated"  checked>
+                                                <label for="inactiveterm">Inactive-Terminated</label>
+                                            </span>
+                                            <span class="oj-choice-row">
+                                                <input id="inactiveterm" type="checkbox" value="Inactive-Leave"  checked>
+                                                <label for="inactiveterm">Inactive-Leave Of Absence</label>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
 
-                        <div>
-                            <label for="homestore">HOME STORE ASSIGNMENT</label>
-                            <input placeholder="" id="homestore" data-bind="value: homeStoreSearch, ojComponent: {component: 'ojInputText'}"/>
+                                <div id="c2">
+                                    <label for="status">MORE OPTIONS</label>
+                                    <div>
+                                        <div id="morecheckboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
+                                                              component: 'ojCheckboxset',
+                                                              value: currentMoreOptions}">
+                                            <span class="oj-choice-row">
+                                                <input id="minor" type="checkbox" value="Minor" checked data-bin="help: {definition: helpDef()}">
+                                                <label for="minor">Minor</label>
+                                            </span>
 
-                            <label for="lastname">AWAY STORE(S)</label>
-                            <input id="awaystore" data-bind="value: awayStoreSearch,ojComponent: {component: 'ojInputText'}">
-
-                        </div>
-
-                        <div>
-                            <label for="job">JOB</label>
-                            <input placeholder="" id="job" data-bind="value: jobSearch, ojComponent: {component: 'ojInputText'}"/>
-
-                            <label for="payroll">PAYROLL ID</label>
-                            <input id="payroll" data-bind="value: payrollIdSearch,ojComponent: {component: 'ojInputText'}">
-
-                        </div>
-                    </div>
-                    <div class="accordionRow">
-                        <div id="employee-search-accordion" data-bind="ojComponent: {component: 'ojAccordion'}">
-                            <div id="c1">
-                                <label for="status">STATUS</label>
-                                <div>
-                                    <div id="statuscheckboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
-                                                          component: 'ojCheckboxset',
-                                                          invalidComponentTracker: statusTracker,
-                                                          value: currentStatus}">
-                                        <span class="oj-choice-row">
-                                            <input id="active" type="checkbox" value="Active" checked>
-                                            <label for="active">Active</label>
-                                        </span>
-                                        <span class="oj-choice-row">
-                                            <input id="inactivesuspended" type="checkbox" value="Inactive-Suspended"  checked>
-                                            <label for="inactivesuspended">Inactive-Suspended</label>
-                                        </span>
-                                        <span class="oj-choice-row">
-                                            <input id="inactiveterm" type="checkbox" value="Inactive-Terminated"  checked>
-                                            <label for="inactiveterm">Inactive-Terminated</label>
-                                        </span>
-                                        <span class="oj-choice-row">
-                                            <input id="inactiveterm" type="checkbox" value="Inactive-Leave"  checked>
-                                            <label for="inactiveterm">Inactive-Leave Of Absence</label>
-                                        </span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div id="c2">
-                                <label for="status">MORE OPTIONS</label>
-                                <div>
-                                    <div id="morecheckboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
-                                                          component: 'ojCheckboxset',
-                                                          value: currentMoreOptions}">
-                                        <span class="oj-choice-row">
-                                            <input id="minor" type="checkbox" value="Minor" checked data-bin="help: {definition: helpDef()}">
-                                            <label for="minor">Minor</label>
-                                        </span>
+                            <div id="advancebtn">
+                                <button id="hideadvance"
+                                        data-bind="click: hideAdvanceSearch,
+                                        ojComponent: {component: 'ojButton', label: 'default search'}">
+                                </button>
 
-                                    </div>
+                                <div class="oj-sm-float-end">
+                                    <input class="oj-button-primary" id="advsubmit" type="submit"
+                                           data-bind="click:advanceSearch,ojComponent: {component: 'ojButton',
+                                            label: 'search', icons: { start: 'fa fa-search'} }" />
+
+<!--
+                                    <button id="advreset"
+                                            data-bind="click: advResetData,
+                                        ojComponent: {component: 'ojButton', label: 'Clear'}" />
+-->
                                 </div>
+
                             </div>
                         </div>
-
-                        <div id="advancebtn">
-                            <button id="hideadvance"
-                                    data-bind="click: hideAdvanceSearch,
-                                    ojComponent: {component: 'ojButton', label: 'Default search'}">
-                            </button>
-
-                            <div class="oj-sm-float-end">
-                                <input class="oj-button-primary" id="advsubmit" type="submit"
-                                       data-bind="click:advanceSearch,ojComponent: {component: 'ojButton', 
-                                        label: 'Search', icons: { start: 'fa fa-search'} }" />
-                                
-                                <button id="advreset"
-                                        data-bind="click: advResetData, 
-                                    ojComponent: {component: 'ojButton', label: 'Clear'}" />
-                            </div>
-
-                        </div>
-                    </div>
-    </div>
         </div>
-    </div>
-</form>
+                                      </div>
+                      </div>
+                </div>
+            </div>
+    </form>
 </div>
 
-<div class="searchWindow oj-flex">
+<div class="searchWindow">
 
-          <div class="oj-flex-item">
-            <h3>Search Results</h3>
-        </div>
+    <div class="oj-flex">
+        <h3>Search Results</h3>
+    </div>
+    <div class="oj-flex">
         <div class="oj-flex-item">
-             <div data-bind="ojComponent: {component: 'ojPagingControl',
-                                    data: listViewDataSource, pageSize:10}"></div>
-        </div>
-           <div class="oj-flex-item">
-             <ul id="listview" data-bind="ojComponent: {component: 'ojListView',
+              <ul id="listview" data-bind="ojComponent: {component: 'ojListView',
                 data: listViewDataSource,
                 item: {template: 'peoplelist_template'},
                 selectionMode: 'single',
                 currentItem: '100',
                 selection: ['100'],
                 scrollPolicyOptions: {fetchSize: 10}}">
-            </ul>
-        </div>
+                     </ul>
+         </div>
+    </div>
+
+    <div class="oj-flex">
+         <div data-bind="ojComponent: {component: 'ojPagingControl',
+                                data: listViewDataSource, pageSize:10}"></div>
+    </div>
     <script type="text/html" id="peoplelist_template">
                  <li data-bind="attr: {id: $data['name']}, click: $parent.empBasicInfoOpen" class="item-marker">
                                 <div class="oj-flex">
@@ -170,7 +169,7 @@
                                             <span data-bind="text: $parent.getBasicFormattedDate(hireDate)"></span>
                                         </div>
                                         <div>
-                                            <div class="employeeStatusListView" data-bind="style:{color: status == 'Inactive-Terminated' ? '#e80023' : '#81bb5f'}"><strong>Hire Status</strong> <span data-bind="text: status"></span></div>
+                                            <div class="employeeStatusListView" data-bind="css:{empStatusInactive: status == 'Inactive-Terminated', empStatusActive: status == 'Active'}"><span data-bind="css:{'fa-times-circle': status == 'Inactive-Terminated', 'fa-check-circle': status == 'Active'}"></span> <span data-bind="text: status"></span></div>
                                         </div>
                                     </div>
                                 </div>
