--- a/OracleJETApplication-V-2/views/people.html
+++ b/OracleJETApplication-V-2/views/people.html
@@ -2,7 +2,7 @@
 <script type="text/html" id="sm_template">
 
    <div class="mainContentArea">
-         <div class="oj-flex oj-flex-items-pad">
+         <div class="oj-flex">
 <!--            <div id="peopleSection" class="oj-flex-item">
                 <a data-bind="click: function(){$root.handleOpen('#peopleDialogWindow')}" style="line-height:39px;">edit <i class="fa fa-pencil-square-o"></i></a>
         
@@ -11,7 +11,9 @@
             Ex. below links to partial tmpl file, people tmpl file already associated with people.js file
             -->
 
-            <div data-bind="template: {name: 'partials/employee-search/employee-search-small'}"></div>
+            <div class="oj-flex-item">
+                <div data-bind="template: {name: 'partials/employee-search/employee-search-small'}"></div>
+            </div>
         </div>
     </div>
     <!--people dialog modal-->
