--- a/OracleJETApplication-V-2/scss/oj-override.scss
+++ b/OracleJETApplication-V-2/scss/oj-override.scss
@@ -16,7 +16,7 @@
          src: url('fonts/HelveticaNeue-Light.ttf') format('truetype');
 //         url('fontname.svg#fontname') format('svg');
 }
- 
+//
 // background colors 
 // ---------------------------------
 $white: #fff;
@@ -123,6 +123,13 @@ $offCanvasGrayLi: #f5f5f5;
 $sideNavBckColor:#f5f5f5;
 $sideNavLinkHover: #454545;
 $sideNavLinksBlue: #045fab;
+/*****Ramu Section**********/
+.redText{
+    color: $lightRed;
+}
+
+
+
 /*****Section Variables*****/
 // font family 
 
